#435873 -  As an app developer i want to be able to add new <book>.
#435873
Code in backend, and yaml documentation for the specified card/user story.
